--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </nav>
     </section>
     
-    <section>
+    <section id="carousel1">
       <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
